--- a/css/mobile.css
+++ b/css/mobile.css
@@ -142,6 +142,11 @@ body {
 .container-mob-menu {
   padding-left: 40px;
   padding-right: 40px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
 }
 .mobil-menu-close-btn {
   position: absolute;
@@ -162,9 +167,7 @@ body {
 
 .mobile-menu-header {
   position: fixed;
-  /* display: flex; */
   width: 100%;
-  height: 100%;
   z-index: 1000;
   top: 0;
   left: 0;
@@ -182,7 +185,7 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--main-color);
-  margin-bottom: 284px;
+  margin-bottom: 64px;
 }
 .modal-menu-item:not(:last-child) {
   margin-bottom: 40px;
@@ -213,8 +216,8 @@ body {
 .mob-soc-list {
   display: flex;
   gap: 56px;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+ 
   margin-top: 8px;
 }
 .mob-soc-item {
