--- a/css/tablet.css
+++ b/css/tablet.css
@@ -165,7 +165,7 @@
   }
 
   /* =============FOOTER ==============*/
-  .footer {
+   .footer {
     background: var(--main-color);
     padding-top: 96px;
     padding-bottom: 96px;
@@ -183,8 +183,8 @@
   .footer-wrap-logo {
     margin-right: none;
     margin-left: none;
-  }
-  /* ==================FOOTER SOC=================== */
+  } */
+  /* ==================FOOTER SOC===================
   .footer-soc-title {
     text-align: left;
   }
@@ -197,4 +197,4 @@
     flex-direction: column;
     justify-content: center;
   }
-}
+} 
