--- a/css/desktop.css
+++ b/css/desktop.css
@@ -199,51 +199,52 @@
     max-width: 264px;
     margin-top: 18px;
   }
-
+  
   .footer-cocontainer {
     display: flex;
   }
   .footer-wrap-logo {
     margin-right: 120px;
   }
-  /* ==================FOOTER SOC=================== */
-
+  /* =====================FOOTER SOC============================= */
   .footer-wrap-soc {
+    min-width: 208px;
+    height: 80px;
     margin-right: 80px;
   }
-  /* .footer-soc-title {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      color: #ffffff;
-      margin-bottom: 16px;
-    }
-    
-    .footer-soc-list {
-      display: flex;
-      gap: 16px;
-    }
-    .footer-soc-link {
-      display: inline-flex;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.1);
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-      transition: background-color var(--trans);
-    }
-    
-    .footer-soc-link:hover,
-    .footer-soc-link:focus {
-      background-color: #31d0aa;
-    } */
-
+  .footer-soc-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+  }
+  
+  .footer-soc-list {
+    display: flex;
+    gap: 16px;
+  }
+  .footer-soc-link {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.1);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    transition: background-color var(--trans);
+  }
+  
+  .footer-soc-link:hover,
+  .footer-soc-link:focus {
+    background-color: #31d0aa;
+  }
+  
   /* ===========================FOOTER INPUT================== */
   .footer-subscribe-wrap {
     /* display: flex; */
@@ -278,7 +279,7 @@
     letter-spacing: 0.04em;
     color: #ffffff99;
   }
-
+  
   .footer-btn-submit {
     position: relative;
     min-width: 162px;
@@ -304,4 +305,3 @@
   .footer-btn-text {
     margin-right: 16px;
   }
-}
