Changes in footer adaptation

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -185,123 +185,11 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
-  .footer-logo {
-    color: #f4f4fd;
-  }
-  .footer-article {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #e7e9fc;
-  }
-  .footer-article {
-    max-width: 264px;
-    margin-top: 18px;
-  }
-  
-  .footer-cocontainer {
-    display: flex;
-  }
-  .footer-wrap-logo {
-    margin-right: 120px;
+  .footer-wrap-soc {
+    margin-right: 80px;
   }
   /* =====================FOOTER SOC============================= */
   .footer-wrap-soc {
-    min-width: 208px;
-    height: 80px;
     margin-right: 80px;
   }
-  .footer-soc-title {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 16px;
-  }
-  
-  .footer-soc-list {
-    display: flex;
-    gap: 16px;
-  }
-  .footer-soc-link {
-    display: inline-flex;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(255, 255, 255, 0.1);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    transition: background-color var(--trans);
-  }
-  
-  .footer-soc-link:hover,
-  .footer-soc-link:focus {
-    background-color: #31d0aa;
-  }
-  
-  /* ===========================FOOTER INPUT================== */
-  .footer-subscribe-wrap {
-    /* display: flex; */
-    min-width: 452px;
-    height: 80px;
-  }
-  .footer-link-btn-wrap {
-    display: flex;
-    gap: 24px;
-  }
-  .footer-input-email {
-    min-width: 264px;
-    height: 40px;
-    padding: 8px 16px;
-    display: flex;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    color: var(--wight-color);
-    background-color: #2e2f42;
-    transition: border-color var(--trans);
-  }
-  .footer-input-email:focus {
-    outline: transparent;
-    border-color: #4d5ae5;
-  }
-  .footer-input-email::placeholder {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 2;
-    align-items: center;
-    letter-spacing: 0.04em;
-    color: #ffffff99;
-  }
-  
-  .footer-btn-submit {
-    position: relative;
-    min-width: 162px;
-    height: 40px;
-    padding: 8px 24px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.04em;
-    color: var(--wight-color);
-    background: #4d5ae5;
-    border-radius: 4px;
-    border: 1px solid transparent;
-    transition: background-color var(--trans);
-  }
-  .footer-btn-submit:hover,
-  .footer-btn-submit:focus {
-    background-color: var(--active-btn-bcg-color);
-  }
-  .footer-btn-text {
-    margin-right: 16px;
-  }
+}
