--- a/css/mobile.css
+++ b/css/mobile.css
@@ -138,14 +138,14 @@ body {
   border: none;
   background-color: transparent;
   padding: 0;
-  opacity: 1;
-  visibility: hidden;
+  /* opacity: 1;
+  visibility: hidden; */
 }
-.mob-menu .is-hidden {
+/* .mob-menu .is-hidden {
   opacity: 0;
   visibility: visible;
   pointer-events: none;
-}
+} */
 .container-mob-menu {
   padding-left: 40px;
   padding-right: 40px;
@@ -490,13 +490,10 @@ body {
 /* ======================= */
 
 /* =============FOOTER ==============*/
-/* 
-.footer-cocontainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 72px;
-}
+/* .footer-mob {
+ margin-right: auto;
+ margin-left: auto;
+} */
 .footer {
   background: var(--main-color);
   padding-top: 96px;
@@ -513,22 +510,20 @@ body {
   color: #e7e9fc;
 }
 .footer-article {
-  max-width: 264px;
-  margin-top: 18px;
+  min-width: 268px;
+  margin-top: 16px;
+  margin-bottom: 72px;
 }
 
-.footer-cocontainer {
+/* .footer-cocontainer {
   display: flex;
-}
+} */
 .footer-wrap-logo {
   margin-right: 120px;
-} */
-/* =====================FOOTER SOC============================= */
-/* .footer-wrap-soc {
-  min-width: 208px;
-  height: 80px;
-  margin-right: 80px;
 }
+
+/* =====================FOOTER SOC============================= */
+
 .footer-soc-title {
   font-weight: 500;
   font-size: 16px;
@@ -537,7 +532,9 @@ body {
   color: #ffffff;
   margin-bottom: 16px;
 }
-
+.footer-wrap-soc {
+  margin-bottom: 72px;
+}
 .footer-soc-list {
   display: flex;
   gap: 16px;
@@ -560,18 +557,10 @@ body {
 .footer-soc-link:hover,
 .footer-soc-link:focus {
   background-color: #31d0aa;
-} */
+}
 
 /* ===========================FOOTER INPUT================== */
-/* .footer-subscribe-wrap {
-  min-width: 452px;
-  height: 80px;
-}
-.footer-link-btn-wrap {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
+
 .footer-input-email {
   min-width: 264px;
   height: 40px;
@@ -583,11 +572,13 @@ body {
   color: var(--wight-color);
   background-color: #2e2f42;
   transition: border-color var(--trans);
+  margin-bottom: 16px;
 }
 .footer-input-email:focus {
   outline: transparent;
   border-color: #4d5ae5;
 }
+
 .footer-input-email::placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -599,7 +590,7 @@ body {
 
 .footer-btn-submit {
   position: relative;
-  max-width: 162px;
+  min-width: 162px;
   height: 40px;
   padding: 8px 24px;
   font-weight: 500;
@@ -621,8 +612,7 @@ body {
 }
 .footer-btn-text {
   margin-right: 16px;
-} */
-
+}
 /* ========================MODAL WINDOW==================== */
 
 .backdrop {
