--- a/css/tablet.css
+++ b/css/tablet.css
@@ -119,7 +119,7 @@
     color: var(--hover-color);
   }
   /* ==============MOBILE MENU============= */
-  .mobile-menu-open-bnt-icon {
+  .mobile-menu-bnt-open {
     display: none;
   }
   .mobile-menu-header {
@@ -165,37 +165,34 @@
   }
 
   /* =============FOOTER ==============*/
-  .footer {
-    background: var(--main-color);
-    padding-top: 96px;
-    padding-bottom: 96px;
-    margin-right: auto;
-    margin-left: auto;
+  .footer-mob {
+    display: none;
+  }
+  .footer-cocontainer {
+    display: flex;
+  }
+  .footer-wrap-soc {
+    min-width: 208px;
+    height: 80px;
+    margin-right: 80px;
+    margin-bottom: 0;
   }
   .footer-article {
     max-width: 264px;
   }
 
-  .footer-wrap-logo {
-    margin-right: 24px;
-    margin-bottom: 72px;
-  }
-  .footer-wrap-logo {
-    margin-right: none;
-    margin-left: none;
-  }
-  */
-  /* /* ==================FOOTER SOC=================== */
-  .footer-soc-title {
-    text-align: left;
+  /* ===========================FOOTER INPUT================== */
+  .footer-subscribe-wrap {
+    min-width: 452px;
+    height: 80px;
   }
   .footer-link-btn-wrap {
     display: flex;
-    flex-direction: row;
-  }
-  .footer-cocontainer {
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
+    gap: 24px;
   }
 }
+/* @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-cocontainer {
+    flex-wrap: wrap;
+  }
+} */
